# Threaded-VideoCapture

./: LICENCE  README.md  pyproject.toml  requirements.txt
.github/workflows/: PyTest.yml  flake8.yml
src/tests/: test.py  test_units.py
src/threaded_videocapture/: __init__.py  main.py
src/typecheck/: typecheck.bat
